# L3_PPIL

./: README.md
Client/: .gitignore  CMakeLists.txt
Client/html/: annotated.html  classes.html  dir_0b9ed7732631b4e65a5030233eb5fc5a.html  dir_19fc12b439e4dfd72e55eacdf1189d08.html  dir_35781f0e74aa8deac19fa31b37174dc2.html  dir_3fb4a04acf5efbc101aa3e4cc38aa4aa.html  dir_4897e8f140324156dc092d93a6fe80ec.html  dir_49977fc1efe42fe1efaa43a5e711112e.html  dir_514e3c103e2720390531b246da6919c5.html  dir_62f38f37ef0bf083fa759060f345bc06.html  dir_68267d1309a1af8e8297ef4c3efbcdba 2.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_6908ff505388a07996d238c763adbdab.html  dir_7c48b4b7fb0dd10f4dd4057ad7274842.html  dir_83f8cffb224fee3eb33f9980cafdec27.html  dir_b4f980b002896d178b949a4c9f7cf7c5.html  dir_bd52eb7ac821349adc834157bbaf2648.html  dir_c1be8d27e7f84178e95f152701110b19.html  dir_c2bc949860c7b9363c32bc6c8ec282d1.html  dir_cb6e897cb5cd097a761323417c742ef8.html  dir_cc867a5f87ee14db356f6d04ba9b922b.html  dir_d44c64559bbebec7f509842c48db8b23 2.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_eca4379131abe55f66c454f8d4bf8fd2.html  dir_ef58b768f9bd39fba716b7ba606569b3.html  dir_f3e3cb03d5f71a642d357f491deb0851.html  files 2.html  files.html  functions 2.html  functions.html  functions_func 2.html  functions_func.html  hierarchy 2.html  hierarchy.html  index 2.html  index.html  jquery 2.js  menudata.js
Client/html/search/: all_0 2.js  all_0.js  all_1 2.js  all_2 2.js  all_2.js  all_3 2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  (+4 more)
Client/include/: Color.h  Point2D.h  Scene.h  Serializable.h  utils.h
Client/include/actions/: Action.h  DrawSceneAction.h  DrawShapeAction.h  DrawVisitor.h  Visitor.h
Client/include/api/: Point2D.h
Client/include/cli/: Cli.h  CliCommand.h
Client/include/client/: Client.h  TCPClient.h  _client.puml
Client/include/dao/: Dao.h
Client/include/data/: ADataArray.h  ADataElement.h  ADataObject.h  ADataPrimitive.h  AParser.h  DataArray.h  DataElement.h  DataImpl.h  DataObject.h  DataPrimitive.h  Parser.h  _data.puml  _parser.puml
Client/include/handler/: ACORHandler.h  CORHandler.h  Handler.h
Client/include/json/: JsonArray.h  JsonElement.h  JsonObject.h  JsonParser.h  JsonPrimitive.h  JsonToken.h
Client/include/packet/: DrawShapePacket.h  InitRendererPacket.h  Packet.h  (+1 more)
Client/src/: Color.cpp  main.cpp
Client/test/: test.cpp
Server/: .gitignore  (+1 more)
(+468 files in other folders)
